# flowgraph-ai

./: FlowGraph-AI_chat history.md  graph.html  readme.md  requirements.txt
flowgraph ai-main/: .gitignore  data.db  docker-compose.yaml  dockerfile  graph.html  pyproject.toml  readme.md  requirements.txt
flowgraph ai-main/configs/GraphDatabase/: neo4j.yaml
flowgraph ai-main/configs/LLM/: bedrock.yaml  openai.yaml
flowgraph ai-main/src/: check_schema.py  const.py  graph.py  graph_visualizer.py  main.py  output_models.py  server.py  state_model.py  ui.py
flowgraph ai-main/src/ContentProvider/: content_provider.py
flowgraph ai-main/src/Databases/: DatabaseBase.py  GraphDatabase.py  Neo4j.py  config_defs.py
flowgraph ai-main/src/LLM/: Bedrock.py  LLMAbstractBase.py  LLMBase.py  OpenAI.py  Pipeline.py  callbacks.py  config_defs.py
flowgraph ai-main/src/Nodes/: __init__.py  answer_question_node.py  execute_cypher_query_node.py  find_target_node.py  generation_node.py  graph_db_sanity_check_node.py  knowledge_graph_generator_node.py  router_node.py  visualize_graph_node.py  web_search_node.py
flowgraph ai-main/src/Prompts/: answer_question_model.txt  detect_target_node.txt  generate_knowledge_graph.txt  generation_model.txt  router_model.txt
flowgraph ai-main/src/Tools/: __init__.py  graph_visualizer.py
flowgraph ai-main/src/Utils/: __init__.py  prompt_renderer.py
src/: graph.py  graph_visualizer.py  load_data.py  ui.py
